fix name alignment again

--- a/src/landing-page/landing-page.component.css
+++ b/src/landing-page/landing-page.component.css
@@ -395,12 +395,12 @@
 /*  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;*/
   position: absolute;
-/*  width: 8em;
+  width: 8em;
   top:11.5em;
-  left:3.2em;*/
-  width: 7em;
+  left:3.2em;
+/*  width: 7em;
   top:11.5em;
-  left:3.4em;
+  left:3.4em;*/
   height: auto;
   z-index: 2;
   font-family: 'Inconsolata', monospace;
